--- a/en docker/docker-compose.yml
+++ b/en docker/docker-compose.yml
@@ -1,30 +1,30 @@
 # PARA ARMAR LOS CNTENEDORES CON IMAGEN DESDE DOCKER HUB
 services:
   api:
-    image: 10.51.15.42:5000/usuarios-api:latest
-    container_name: usuarios-api
+    image: 10.51.15.42:5000/votantes-api:latest
+    container_name: votantes-api
     ports:
       - 3001:3001
     restart: always
     networks:
-      - usuarios-net
+      - votantes-net
 
   app:
-    image: 10.51.15.42:5000/usuarios-ui:latest
-    container_name: usuarios-ui
+    image: 10.51.15.42:5000/votantes-ui:latest
+    container_name: votantes-ui
     ports:
       - 8080:80
     restart: always
     depends_on:
       - api
     networks:
-      - usuarios-net
+      - votantes-net
     environment:
-      #API_URL: 'http://10.51.15.41:3001/'
+      API_URL: 'http://10.51.15.41:3002/'
       API_URL_USER: 'http://10.51.15.41:3001/'
       REPORTS_URL: 'http://10.51.15.110:8123/api/reports/'
-
+      FILES_URL: 'http://10.51.15.41:8123/'
 networks:
-  usuarios-net:
+  votantes-net:
     driver: bridge
-    name: usuarios-net
+    name: votantes-net
