--- a/en docker/docker-compose.yml
+++ b/en docker/docker-compose.yml
@@ -1,22 +1,42 @@
 # PARA ARMAR LOS CNTENEDORES CON IMAGEN DESDE DOCKER HUB
 services:
+  files:
+    image: nginx
+    container_name: votantes-files
+    ports:
+      - "8123:80"
+    volumes:
+      - /mnt/judiciales2024:/usr/share/nginx/html
+    restart: always
+    networks:
+      - votantes-net
+      
   api:
-    image: 10.51.15.42:5000/votantes-api:latest
+    image: votantes-api
+    build:
+      context: ./votantes-api  # Ajusta según la ubicación de tu proyecto
+      dockerfile: Dockerfile
     container_name: votantes-api
     ports:
-      - 3001:3001
+      - "3002:3000"
+    environment:
+      PORT: '3000'
     restart: always
     networks:
       - votantes-net
 
   app:
-    image: 10.51.15.42:5000/votantes-ui:latest
+    image: votantes-ui
+    build:
+      context: ./votantes-ui  # Ajusta según la ubicación de tu proyecto
+      dockerfile: Dockerfile
     container_name: votantes-ui
     ports:
-      - 8080:80
+      - "8545:80"
     restart: always
     depends_on:
       - api
+      - files
     networks:
       - votantes-net
     environment:
