--- a/votantes-api/Dockerfile
+++ b/votantes-api/Dockerfile
@@ -1,5 +1,5 @@
 # Etapa 1: Construcción (builder)
-FROM node:alpine as builder
+FROM node:slim AS builder
 
 # Crear un directorio para la app
 WORKDIR /usr/src/app
@@ -7,11 +7,8 @@ WORKDIR /usr/src/app
 # Copiar los archivos de package.json y package-lock.json
 COPY package*.json ./
 
-# Instalar las dependencias, incluyendo la CLI de NestJS globalmente
-RUN npm install -g @nestjs/cli
-
-# Instalar las dependencias del proyecto
-RUN npm ci --only=production
+# Instalar todas las dependencias (incluyendo devDependencies necesarias para build)
+RUN npm ci
 
 # Copiar el código fuente
 COPY . .
@@ -23,7 +20,7 @@ COPY .env ./
 RUN npm run build
 
 # Etapa 2: Imagen final (más ligera)
-FROM node:alpine
+FROM node:slim
 
 # Crear un directorio para la app
 WORKDIR /usr/src/app
@@ -31,12 +28,13 @@ WORKDIR /usr/src/app
 # Copiar solo los archivos necesarios desde la etapa de construcción
 COPY --from=builder /usr/src/app/dist /usr/src/app/dist
 COPY --from=builder /usr/src/app/package*.json /usr/src/app/
+COPY --from=builder /usr/src/app/.env /usr/src/app/.env
 
-# Instalar las dependencias necesarias para producción
+# Instalar solo las dependencias de producción
 RUN npm ci --only=production
 
-# Configurar el puerto (descomentado si es necesario)
-EXPOSE 3001
+# Configurar el puerto
+# EXPOSE 3001
 
 # Comando para iniciar la aplicación en producción
 CMD ["npm", "run", "start:prod"]
