--- a/en docker/docker-compose.yml
+++ b/en docker/docker-compose.yml
@@ -6,33 +6,25 @@ services:
     ports:
       - "8123:80"
     volumes:
-      - /mnt/judiciales2024:/usr/share/nginx/html
+      - /mnt/docselectoral:/usr/share/nginx/html
     restart: always
     networks:
       - votantes-net
-      
   api:
-    image: votantes-api
-    build:
-      context: ./votantes-api  # Ajusta según la ubicación de tu proyecto
-      dockerfile: Dockerfile
+    image: 10.51.15.42:5000/votantes-api:latest
     container_name: votantes-api
     ports:
-      - "3002:3000"
-    environment:
-      PORT: '3000'
+      - 3002:3000
     restart: always
     networks:
       - votantes-net
 
+
   app:
-    image: votantes-ui
-    build:
-      context: ./votantes-ui  # Ajusta según la ubicación de tu proyecto
-      dockerfile: Dockerfile
+    image: 10.51.15.42:5000/votantes-ui:latest
     container_name: votantes-ui
     ports:
-      - "8545:80"
+      - 8545:80
     restart: always
     depends_on:
       - api
